--- a/remove-the-fucky-wucky.css
+++ b/remove-the-fucky-wucky.css
@@ -32,3 +32,22 @@ on th eleft side of the app*/
   > div:nth-child(2) {
   display: none;
 }
+#app-mount
+  > div.appAsidePanelWrapper_a3002d
+  > div
+  > div.app_a3002d
+  > div
+  > div.layers__960e4.layers__160d8
+  > div
+  > div
+  > div
+  > div.content_c48ade
+  > div.page_c48ade
+  > div
+  > div
+  > div.content_f75fb0
+  > main
+  > div.messagesWrapper__36d07.group-spacing-16
+  > div.chatTypingGradientNotAtBottom__36d07.chatGradientBase__36d07 {
+  display: none;
+}
